done upto box before style

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,4 +35,6 @@ body {
   width: 25px;
   height: 100%;
   background: linear-gradient(#fff, #fff, #e3e3e3);
+  filter: blur(1px);
+  z-index: 1;
 }/*# sourceMappingURL=style.css.map */
