--- a/assets/style.scss
+++ b/assets/style.scss
@@ -36,6 +36,8 @@ body{
             width: 25px;
             height: 100%;
             background: linear-gradient(#fff, #fff, #e3e3e3);
+            filter: blur(1px);
+            z-index: 1;
         }
     }
 }
