--- a/assets/style.scss
+++ b/assets/style.scss
@@ -39,5 +39,21 @@ body{
             filter: blur(1px);
             z-index: 1;
         }
+
+        &::after{
+            content: '';
+            position: absolute;
+            top: 1px;
+            right: -1px;
+            width: 25px;
+            height: 100%;
+            background: linear-gradient(#fff, #fff, #9d9d9d);
+            filter: blur(1px);
+            z-index: 1;
+        }
+
+        &::shadow{
+            
+        }
     }
 }
