--- a/assets/style.css
+++ b/assets/style.css
@@ -48,4 +48,30 @@ body {
   background: linear-gradient(#fff, #fff, #9d9d9d);
   filter: blur(1px);
   z-index: 1;
+}
+.container .box .shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #eee;
+}
+.container .box .shadow::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: calc(100% + 96px);
+  width: 120%;
+  height: 240%;
+  background: linear-gradient(rgba(0, 0, 0, 0.075), transparent);
+  transform: skewX(45deg);
+}
+.container .box .shadow::after {
+  content: "";
+  position: absolute;
+  bottom: -200%;
+  left: calc(100% + 80px);
+  width: 100%;
+  height: 200%;
+  background: linear-gradient(rgba(0, 0, 0, 0.075), transparent);
+  transform: skewX(45deg);
 }/*# sourceMappingURL=style.css.map */
