--- a/assets/style.scss
+++ b/assets/style.scss
@@ -52,8 +52,33 @@ body{
             z-index: 1;
         }
 
-        &::shadow{
+        .shadow{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #eee;
+
+            &::before{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: calc(100% + 96px);        
+                width: 120%;
+                height: 240%;
+                background: linear-gradient(rgba(0,0,0,0.075), transparent);
+                transform: skewX(45deg);
+            }
             
+            &::after{
+                content: '';
+                position: absolute;
+                bottom: -200%;
+                left: calc(100% + 80px);        
+                width: 100%;
+                height: 200%;
+                background: linear-gradient(rgba(0,0,0,0.075), transparent);
+                transform: skewX(45deg);
+            }
         }
     }
 }
