done upto the style of content

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,15 @@ body {
   filter: blur(1px);
   z-index: 1;
 }
+.container .box .cover {
+  position: absolute;
+  top: 0;
+  left: -100px;
+  width: 100px;
+  height: 100px;
+  background: #cfd1e1;
+  z-index: 10;
+}
 .container .box .shadow {
   position: absolute;
   width: 100%;
@@ -74,4 +83,11 @@ body {
   height: 200%;
   background: linear-gradient(rgba(0, 0, 0, 0.075), transparent);
   transform: skewX(45deg);
+}
+.container .box .content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#dbdae1, #a3aaba);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1), 15px 15px 15px rgba(0, 0, 0, 0.1), 25px 10px 20px rgba(0, 0, 0, 0.1), 50px 50px 80px rgba(0, 0, 0, 0.25), inset 3px 3px 2px #fff;
 }/*# sourceMappingURL=style.css.map */
