--- a/assets/style.scss
+++ b/assets/style.scss
@@ -52,6 +52,16 @@ body{
             z-index: 1;
         }
 
+        .cover{
+            position: absolute;
+            top: 0;
+            left: -100px;
+            width: 100px;
+            height: 100px;
+            background: #cfd1e1;
+            z-index: 10;
+        }
+
         .shadow{
             position: absolute;
             width: 100%;
@@ -79,6 +89,18 @@ body{
                 background: linear-gradient(rgba(0,0,0,0.075), transparent);
                 transform: skewX(45deg);
             }
+        }
+        
+        .content{
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(#dbdae1, #a3aaba);
+            box-shadow: 5px 5px 5px rgba(0,0,0,0.1),
+                        15px 15px 15px rgba(0,0,0,0.1),
+                        25px 10px 20px rgba(0,0,0,0.1),
+                        50px 50px 80px rgba(0,0,0,0.25),
+                        inset 3px 3px 2px #fff;
         }
     }
 }
