--- a/assets/style.scss
+++ b/assets/style.scss
@@ -101,6 +101,37 @@ body{
                         25px 10px 20px rgba(0,0,0,0.1),
                         50px 50px 80px rgba(0,0,0,0.25),
                         inset 3px 3px 2px #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .form{
+                position: relative;
+                width: 260px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+
+                .logo{
+                    width: 70px;
+                    height: 70px;
+                    background: #444;
+                    color: #fff;
+                    font-size: 1.75em;
+                    margin-bottom: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 50%;
+                }
+
+                h2{
+                    font-size: 2em;
+                    color: #444;
+                    margin-bottom: 20px;
+                }
+            }
         }
     }
 }
