--- a/assets/style.css
+++ b/assets/style.css
@@ -45,7 +45,7 @@ body {
   right: -1px;
   width: 25px;
   height: 100%;
-  background: linear-gradient(#fff, #fff, #9d9d9d);
+  background: #9d9d9d;
   filter: blur(1px);
   z-index: 1;
 }
@@ -151,6 +151,16 @@ body {
   color: #fff;
   padding: 2px 12px;
   border-radius: 4px;
+}
+.container .box .content .form .inputBox input[type=submit] {
+  background: #444;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 10px;
+}
+.container .box .content .form .inputBox input[type=submit]:hover {
+  background-color: black;
 }
 .container .box .content .form .inputBox i {
   position: absolute;
